tests/baselines/reference/numericIndexExpressions.errors.txt
numericIndexExpressions.ts(10,1): error TS2322: Type 'number' is not assignable to type 'string'.
numericIndexExpressions.ts(11,1): error TS2322: Type 'number' is not assignable to type 'string'.
numericIndexExpressions.ts(14,1): error TS2322: Type 'number' is not assignable to type 'string'.
numericIndexExpressions.ts(15,1): error TS2322: Type 'number' is not assignable to type 'string'.


==== numericIndexExpressions.ts (4 errors) ====
    interface Numbers1 {
        1: string;
    }
    interface Strings1 {
        '1': string;
    }
     
     
    var x: Numbers1;
    x[1] = 4; // error
    ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    x['1'] = 4; // error
    ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    
    var y: Strings1;
    y['1'] = 4; // should be error
    ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    y[1] = 4; // should be error
    ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.